<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AccountActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUserInfo"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtUserInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Info" />

            <TextView
                android:id="@+id/txtUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:text="TextView"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="60dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="50dp"
            android:text="Sign Out" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <fragment
        android:id="@+id/nav_fragment"
        android:name="comp3350.mealbuddy.presentation.NavFragment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
