<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_timeline"
        android:enabled="true"
        android:icon="@drawable/ic_timeline"
        android:title="Timeline"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_goals"
        android:enabled="true"
        android:icon="@drawable/ic_bullseye_black"
        android:title="Goals"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_stats"
        android:enabled="true"
        android:icon="@drawable/ic_goals"
        android:title="Stats"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="Account"
        app:showAsAction="always" />
</menu>